Bug 1137 - Fix memory leak and possibly endless loop in `error'
Summary: Fix memory leak and possibly endless loop in `error'
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.5
: P2 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc236
  Show dependency treegraph
 
Reported: 2005-07-29 23:20 UTC by Roland McGrath
Modified: 2019-04-10 10:41 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2005-07-29 23:20:52 UTC
This trunk patch should go into the 2.3 branch:

2005-07-19  Ulrich Drepper  <drepper@redhat.com>

	* misc/Makefile: Add rules to build and run tst-error1.
	* misc/tst-error1.c: New file.
	* misc/error.c: Fix memory leak and possibly endless loop.
Comment 1 Sourceware Commits 2005-07-29 23:26:37 UTC
Subject: Bug 1137

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-07-29 23:26:19

Modified files:
	misc           : error.c Makefile 
Added files:
	misc           : tst-error1.c 

Log message:
	2005-07-19  Ulrich Drepper  <drepper@redhat.com>
	
	[BZ #1137]
	* misc/Makefile: Add rules to build and run tst-error1.
	* misc/tst-error1.c: New file.
	* misc/error.c: Fix memory leak and possibly endless loop.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/misc/tst-error1.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=NONE&r2=1.1.4.1
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/misc/error.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.34&r2=1.34.4.1
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/misc/Makefile.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.112&r2=1.112.4.1

Comment 2 Thomas Schwinge 2005-07-30 10:01:57 UTC
That one <URL:http://sourceware.org/ml/libc-alpha/2005-07/msg00068.html> needs
to go in alongside the patch you already applied.
Comment 3 Sourceware Commits 2005-08-02 03:31:14 UTC
Subject: Bug 1137

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-08-02 03:31:09

Modified files:
	misc           : error.c 

Log message:
	2005-07-28  Thomas Schwinge  <schwinge@nic-nac-project.de>
	
	[BZ #1137]
	* misc/error.c [_LIBC]: Include <stdbool.h> and <stdint.h>.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/misc/error.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.34.4.1&r2=1.34.4.2

Comment 4 Ulrich Drepper 2005-09-25 18:32:54 UTC
The checking has apparently happened.  Closing.