2005-07-19  Ulrich Drepper  <drepper@redhat.com>

[BZ #1137]
	* misc/Makefile: Add rules to build and run tst-error1.
	* misc/tst-error1.c: New file.
	* misc/error.c: Fix memory leak and possibly endless loop.